[package]
name = "mass-aw-web"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5" }
engine = {path = "../engine" }
js-sys = "0.3.51"
log = "0.4.14"
byteorder = "1.4.3"
lyon = "0.17.5"

[dependencies.web-sys]
version = "0.3.51"
features = [
    "Window", "console", "Element", "Document", "HtmlCanvasElement", "WebGlBuffer",
    "WebGlFramebuffer", "WebGlProgram","WebGlRenderingContext", "WebGlShader", "WebGlTexture",
    "WebGlUniformLocation", "KeyboardEvent", "UrlSearchParams", "Location", "Performance"
]
